--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A beauty pageant app for pet lovers to upload their favourite animal pictures, comment and vote on their favorite.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "seeds": "node seeds/index.js",
     "dev": "nodemon index",
     "test": "jest"
