--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A beauty pageant app for pet lovers to upload their favourite animal pictures, comment and vote on their favorite.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "seeds": "node seeds/index.js",
     "dev": "nodemon index",
     "test": "jest"
@@ -30,6 +30,7 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
