--- a/package.json
+++ b/package.json
@@ -26,15 +26,16 @@
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.3",
+    "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
-    "jest": "^27.2.0",
-    "nodemon": "^2.0.12"
+    "jest": "^27.2.3",
+    "nodemon": "^2.0.13"
   }
 }
