add heroku post build run seeds

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "heroku-postbuild": "npm run seeds",
     "seeds": "node seeds/index.js",
     "dev": "nodemon index",
     "test": "jest"
