--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A beauty pageant app for pet lovers to upload their favourite animal pictures, comment and vote on their favorite.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "server.js",
     "heroku-postbuild": "npm run seeds",
     "seeds": "node seeds/index.js",
+    "dev": "nodemon index",
     "test": "jest"
   },
   "repository": {
